# ARM-Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: cpu.hpp  decoder.hpp  instruction.hpp  memory.hpp  registers.hpp  repl.hpp
src/: cpu.cpp  decoder.cpp  instruction.cpp  main.cpp  memory.cpp  registers.cpp  repl.cpp
